⚗️ chr19, perfect segments

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ experiments/e_coli_sim/output
 experiments/covid/input/covid19-ecoli-efg.zip
 experiments/covid/input/covid19-100.fa
 experiments/covid/output
+
+experiments/chr19/input/hr19_100.aligned.fa.xz.00
+experiments/chr19/input/hr19_100.aligned.fa.xz.02
+experiments/chr19/input/hr19_100.aligned.fa.xz.01
+experiments/chr19/input/chr19_100.aligned.uppercase.fa
+experiments/chr19/output
